# audit-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  security.yml
docker/: Dockerfile  Dockerfile.worker  docker-compose.yml  init-db.sql  prometheus-alerts.yml  prometheus.yml
docker/grafana/dashboards/: audit-agent-overview.json
docs/: api-reference.md  architecture.md  compliance.md  deployment.md  development.md
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx
frontend/src/components/: create-project-dialog.tsx  sidebar.tsx
frontend/src/hooks/: use-websocket.ts
frontend/src/stores/: auth-store.ts
frontend/src/types/: api.ts
infrastructure/scripts/: init_db.py
infrastructure/terraform/: main.tf  terraform.tfvars.example
scripts/: seed_data.py  setup.bat  setup.sh
src/: __init__.py
src/agents/: __init__.py  assist_mode.py  autonomous_governance.py  base.py  registry.py  state.py
src/agents/auditee/: __init__.py  controls_monitor.py  evidence_search.py  orchestrator.py  prep.py  response.py  risk_alert.py
src/agents/auditor/: __init__.py  anomaly_detective.py  controls_tester.py  data_collector.py  follow_up.py  knowledge.py  orchestrator.py  planner.py  report_writer.py
src/agents/graphs/: __init__.py  auditee_graph.py  auditor_graph.py
src/analytics/: __init__.py  cross_company.py  portfolio_risk.py
src/api/: dependencies.py  main.py
src/api/middleware/: __init__.py  auth.py  correlation.py  rate_limit.py  security.py  tenant.py
src/api/routes/: agents.py  analytics.py  auth.py  compliance.py  connectors.py  dialogue.py  evidence.py  health.py  notifications.py  projects.py  reports.py  risk_templates.py  websocket.py
src/api/schemas/: __init__.py  agents.py  auth.py  dialogue.py  evidence.py  projects.py
src/config/: constants.py  regions.py  settings.py  tiers.py
src/connectors/: __init__.py  base.py  box.py  email.py  sap.py  sharepoint.py
src/db/: __init__.py  base.py  engine.py  session.py
src/db/migrations/: env.py
src/db/models/: __init__.py  audit_event.py  auditee.py  auditor.py  dialogue.py  forecasts.py  notification.py  risk_templates.py  tenant.py
src/db/repositories/: __init__.py  audit_event.py  base.py  dialogue.py  finding.py  notification.py  project.py
src/dialogue/: __init__.py  bus.py  escalation.py  kafka_bus.py  protocol.py  quality.py  redis_bus.py
src/llm_gateway/: __init__.py  cost_tracker.py  gateway.py
src/llm_gateway/prompts/: __init__.py  anomaly.py  report.py  response.py
src/llm_gateway/providers/: __init__.py  anthropic.py  azure_openai.py  base.py
src/ml/: __init__.py  anomaly_detector.py  graph_analysis.py  predictive_risk.py  process_mining.py  risk_scorer.py  time_series.py
src/monitoring/: __init__.py  health.py  integrations.py  logging.py  metrics.py  sla.py
src/notifications/: __init__.py  base.py  dispatcher.py  slack.py  teams.py
src/reports/: __init__.py  risk_intelligence.py
src/reports/templates/: __init__.py  executive_summary.py  risk_forecast.py
src/risk_templates/: __init__.py  finance.py  it_services.py  manufacturing.py
src/security/: __init__.py  audit_trail.py  auth.py  compliance.py  encryption.py  rbac.py
src/storage/: __init__.py  s3.py  vector.py
src/workflows/: __init__.py  activities.py  audit_workflow.py  auditee_workflow.py  predictive_risk_workflow.py  scheduler.py  self_assessment.py  worker.py
tests/: __init__.py  conftest.py  factories.py
tests/e2e/: test_audit_flow.py  test_phase3_integration.py
tests/integration/: test_api.py  test_full_api_surface.py  test_notification_dispatch.py  test_redis_streams.py  test_risk_templates_flow.py
tests/unit/test_agents/: __init__.py  test_anomaly_detective.py  test_assist_mode.py  test_auditee_orchestrator.py  test_auditor_orchestrator.py  test_autonomous_governance.py  test_base.py  test_controls_monitor.py  test_controls_tester.py  test_data_collector.py  test_evidence_search.py  test_follow_up.py  test_graphs.py  test_knowledge.py  (+7 more)
(+138 files in other folders)
