[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "audit-agent"
version = "0.1.0"
description = "Dual-Side Autonomous AI Audit Agent Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "goyos" },
]

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "slowapi>=0.1.9",
    "websockets>=13.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # Redis
    "redis[hiredis]>=5.2.0",
    # LLM / AI
    "anthropic>=0.42.0",
    "langgraph>=0.2.60",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.28",
    "langsmith>=0.2.10",
    # ML
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Auth & Security
    "pyjwt[crypto]>=2.9.0",
    "bcrypt>=4.2.0",
    "cryptography>=43.0.0",
    "passlib[bcrypt]>=1.7.4",
    # Config & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    # Logging & Monitoring
    "loguru>=0.7.3",
    "structlog>=24.4.0",
    "prometheus-client>=0.21.0",
    # Storage
    "boto3>=1.35.0",
    # HTTP
    "httpx>=0.28.0",
    # Messaging
    "aiokafka>=0.11.0",
    # Workflow orchestration
    "temporalio>=1.7.0",
    # Utilities
    "python-multipart>=0.0.18",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.5.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    # Linting & Formatting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Security scanning
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
    "safety>=3.2.0",
    # Pre-commit
    "pre-commit>=4.0.0",
    # Type stubs
    "types-pyyaml>=6.0.0",
    "types-redis>=4.6.0",
    "boto3-stubs>=1.35.0",
    "sqlalchemy-stubs>=0.4",
]
observability = [
    # Sentry
    "sentry-sdk[fastapi,sqlalchemy,loguru]>=2.0.0",
    # Datadog
    "ddtrace>=2.0.0",
    "datadog>=0.49.0",
    # Prophet (時系列分析)
    "prophet>=1.1.5",
]

[project.scripts]
audit-agent = "src.api.main:run"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Ruff ──────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "S", "A", "C4", "DTZ", "T20", "RUF"]
ignore = [
    "S101",   # assert使用許可（テスト用）
    "S104",   # 0.0.0.0バインド許可
    "B008",   # Depends()関数コール許可
    "RUF012", # mutable class variable
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ARG", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

# ── MyPy ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain_anthropic.*",
    "langchain_core.*",
    "langsmith.*",
    "pgvector.*",
    "sklearn.*",
    "xgboost.*",
    "prometheus_client.*",
    "temporalio.*",
    "aiokafka.*",
    "sentry_sdk.*",
    "ddtrace.*",
    "datadog.*",
    "prophet.*",
]
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "unit: ユニットテスト",
    "integration: 統合テスト（外部サービス依存）",
    "e2e: エンドツーエンドテスト",
    "slow: 実行時間の長いテスト",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
addopts = "-v --tb=short"

# ── Coverage ──────────────────────────────────────────
[tool.coverage.run]
source = ["src"]
omit = [
    "src/db/migrations/*",
    "tests/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@overload",
    "raise NotImplementedError",
]
